--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -150,7 +150,7 @@
     justify-content: center;
     height: 36px;
     max-width: max-content;
-    background-color: rgb(33, 33, 33, 0.07);
+    background-color: rgba(27, 26, 26, 0.07);
     border-radius: 100px;
     color: #2f2f2f;
     line-height: 0;
@@ -758,7 +758,7 @@
   justify-content: center;
   height: 36px;
   max-width: max-content;
-  background-color: rgb(33, 33, 33, 0.07);
+  background-color: rgba(44, 43, 43, 0.07);
   border-radius: 100px;
   color: #2f2f2f;
   line-height: 0;
